syntax = "proto3";

package api.notes.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Egorpalan/grpc-easyp/pkg/api/notes/v1";

message Note {
  string id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

message CreateOrUpdateNoteRequest {
  optional string id = 1;
  string title = 2;
  string description = 3;
}

message CreateOrUpdateNoteResponse {
  Note note = 1;
}

message GetNoteRequest {
  string id = 1;
}

message GetNoteResponse {
  Note note = 1;
}

message ListNotesRequest {}

message ListNotesResponse {
  repeated Note items = 1;
}

message DeleteNoteRequest {
  string id = 1;
}

message DeleteNoteResponse {}